# OpenUniverse

./: .gitignore  README.md
gen_pop/: CMakeLists.txt  duckdb.hpp
gen_pop/include/: equivalence.h  kb_core.h  kb_intern.h  parse.h
gen_pop/src/: equivalence.cpp  kb_core.cpp  kb_intern.cpp  main.cpp  parse.cpp
sparsePOP_dev/: AUTHORS  ChangeLog  Makefile.am  NEWS  PARAMETER.txt  Parameters.cpp  alltest.sh  clique.cpp  configure  configure.in  configure_old.in  conversion.cpp  conversion.h  cspGraph.cpp  cspGraph.h  debug.cpp  debug.h  global.h  info.cpp  info.h  input.cpp  input.h  param.pop  polynomials.cpp  readme.txt  sparsePOP.cpp  spvec.cpp  sup.cpp
sparsePOP_dev/GMSfiles/: Bex9_2_4.gms  Bprolog.gms  Bst_e05.gms  elimy.gms  ex9_2_2.gms  meanvar.gms  qp4.gms  testCP.gms
sparsePOP_dev/run_example/: param.pop  param.sdpa  problem.gms  problem2.gms
